Fix: Astro alias added and page layout issue resolved

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -3,6 +3,10 @@
   src: url("https://assets.codepen.io/605876/Blender-Pro-Bold.otf");
   font-display: swap;
 }
+html, body {
+  margin: 0;
+  padding: 0;
+}
 
 * {
   margin: 0;
